# docqos

./: .gitignore  CMakeLists.txt  README.md
arch/: init.cpp
arch/boot/: boot.s
arch/cpu/: gdt.cpp  paging.cpp
compile/: kernel.ldscript
compile/cdrom/boot/grub/: grub.cfg
include/arch/: init.h
include/arch/cpu/: gdt.h  paging.h  type.h
include/arch/memory/: memory.h
include/arch/tool/: atomic.h
include/kernel/: compiler.h
include/kernel/init/: bootinfo.h
include/kernel/memory/: buddy.h  memory.h  new.h
include/kernel/tool/: list.h  spinlock.h
kernel/init/: icxxabi.cpp  main.cpp
kernel/memory/: buddy.cpp  memory.cpp
